fixed unclickable input field cus of z-index

--- a/src/components/MainPage/style.css
+++ b/src/components/MainPage/style.css
@@ -19,7 +19,7 @@ body {
   position: fixed;
   left: 0;
   right: 0;
-  z-index: -1;
+  /* z-index: -1; */
   display: block;
   background-image: url('../../assets/images/background.png');
   background-position: center;
